vlib/v/parser/tests/unexpected_expr.out
vlib/v/parser/tests/unexpected_expr.vv:1:5: error: invalid expression: unexpected keyword `break`
    1 | _ = break
      |     ~~~~~
